--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
-  "name": "save_website_extension",
+  "name": "savethissite",
   "private": true,
   "version": "0.0.1",
-  "description": "Save your websites with tags and revisit them quickly.",
-  "pricing": "Free",
-  "preview": "https://www.pingprospect.com/",
+  "description": "Save any website with tags & categories so you can find and revisit it anytime.",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -14,6 +12,9 @@
   },
   "dependencies": {
     "@crxjs/vite-plugin": "^2.1.0",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@supabase/supabase-js": "^2.54.0",
     "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
+    "@types/chrome": "^0.1.3",
     "@types/node": "^24.2.1",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
